[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["takapdayon <business.takap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.20.0"
online-judge-tools = "^11.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
